Fix buy button mobile padding  and footer menu on mobile

--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -72,3 +72,7 @@
     border-top: 1px solid #e5e5e5;
     margin: 15px 0;
 }
+
+:global(.vtex-product-summary-2-x-containerNormal) {
+    padding: 0 .75rem;
+}
