--- a/styles/css/vtex.menu.css
+++ b/styles/css/vtex.menu.css
@@ -8,7 +8,9 @@
         margin: 0 50px;
     }
 
-    .styledLinkContent{
-        text-transform: uppercase;
+    .styledLinkContent:hover{
+        font-weight: bold;
+        transition: .3s all ease-in-out;
+        
     }
 }
